// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulTooltip basic render: renders <StatefulContainer/> 1`] = `
<StatefulContainer
  accessibilityType="tooltip"
  autoFocus={true}
  content={[MockFunction]}
  focusLock={true}
  initialState={
    Object {
      "isOpen": true,
    }
  }
  onClose={[MockFunction]}
  onMouseEnterDelay={100}
  onMouseLeaveDelay={200}
  onOpen={[MockFunction]}
  overrides={
    Object {
      "Body": [Function],
    }
  }
  placement="topLeft"
  popperOptions={Object {}}
  renderAll={false}
  returnFocus={true}
  showArrow={true}
  stateReducer={[MockFunction]}
  triggerType="hover"
>
  <Component />
</StatefulContainer>
`;

exports[`StatefulTooltip basic render: renders <Tooltip/> 1`] = `
<Tooltip
  accessibilityType="tooltip"
  autoFocus={true}
  content={[Function]}
  focusLock={true}
  ignoreBoundary={false}
  isOpen={true}
  onBlur={[Function]}
  onClickOutside={[Function]}
  onEsc={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseEnterDelay={100}
  onMouseLeave={[Function]}
  onMouseLeaveDelay={200}
  overrides={
    Object {
      "Body": [Function],
    }
  }
  placement="topLeft"
  popperOptions={Object {}}
  renderAll={false}
  returnFocus={true}
  showArrow={true}
  triggerType="hover"
>
  <span>
    Hover me
  </span>
</Tooltip>
`;
